Revert "ConfettiPlugin extends BundleActivator instead of AbstractUIPlugin"
This reverts commit fb3736838441dac0059987534d6b5949518c7571.