@@ -1,12 +1,24 @@
 package org.confetti.dataprovider.db.wizards;
 
+import java.util.List;
+
+import org.confetti.dataprovider.db.DbConnectionDescriptor;
 import org.confetti.dataprovider.db.DbConnectionFactory;
+import org.confetti.dataprovider.db.DbDataProvider;
+import org.confetti.dataprovider.db.entities.InstituteDb;
+import org.confetti.dataprovider.db.util.HibernateUtil;
+import org.confetti.dataprovider.db.util.HibernateUtil.Mode;
+import org.confetti.rcp.ConfettiPlugin;
 import org.confetti.rcp.extensions.ConnectionDescr;
 import org.confetti.rcp.extensions.ConnectionFactory;
 import org.confetti.rcp.extensions.ConnectionRegistry;
 import org.confetti.util.Tuple;
 import org.eclipse.jface.dialogs.MessageDialog;
+import org.eclipse.jface.preference.IPreferenceStore;
 import org.eclipse.jface.wizard.Wizard;
+import org.hibernate.Criteria;
+import org.hibernate.Session;
+import org.hibernate.SessionFactory;
 
 /**
  * @author Gabor Bubla
@@ -32,28 +44,28 @@ public class OpenDatabaseWizard extends Wizard {
             MessageDialog.openError(getShell(), "Error", "The selected connection is not a database connection.");
             return false;
         }
-        return false;
-//        DbConnectionFactory dbConnFact = (DbConnectionFactory) connFact;
-//        IPreferenceStore prefStore = ConfettiPlugin.getDefault().getPreferenceStore();
-//        DbConnectionDescriptor dbConnDescr = dbConnFact.createConnectionDescriptor(selConn.getFirst(), prefStore);
-//        
-//        SessionFactory sessFact = HibernateUtil.createSessionFactory(dbConnDescr, Mode.UPDATE);
-//        Session session = sessFact.openSession();
-//        try {
-//            Criteria criteria = session.createCriteria(InstituteDb.class);
-//            List<InstituteDb> institutes = (List<InstituteDb>) criteria.list();
-//            if (institutes.isEmpty()) {
-//                MessageDialog.openError(getShell(), "Error", "No Institute found in the database.");
-//                return true;
-//            }
-//            InstituteDb inst = institutes.get(0);
-//            String info = selConn.getSecond() + " : " + selConn.getFirst();
-//            DbDataProvider dp = new DbDataProvider(sessFact, inst, info);
-//            ConfettiPlugin.getDefault().setDataProvider(dp, dp);
-//            return true;
-//        } finally {
-//            session.close();
-//        }
+        
+        DbConnectionFactory dbConnFact = (DbConnectionFactory) connFact;
+        IPreferenceStore prefStore = ConfettiPlugin.getDefault().getPreferenceStore();
+        DbConnectionDescriptor dbConnDescr = dbConnFact.createConnectionDescriptor(selConn.getFirst(), prefStore);
+        
+        SessionFactory sessFact = HibernateUtil.createSessionFactory(dbConnDescr, Mode.UPDATE);
+        Session session = sessFact.openSession();
+        try {
+            Criteria criteria = session.createCriteria(InstituteDb.class);
+            List<InstituteDb> institutes = (List<InstituteDb>) criteria.list();
+            if (institutes.isEmpty()) {
+                MessageDialog.openError(getShell(), "Error", "No Institute found in the database.");
+                return true;
+            }
+            InstituteDb inst = institutes.get(0);
+            String info = selConn.getSecond() + " : " + selConn.getFirst();
+            DbDataProvider dp = new DbDataProvider(sessFact, inst, info);
+            ConfettiPlugin.getDefault().setDataProvider(dp, dp);
+            return true;
+        } finally {
+            session.close();
+        }
     }
 
 }
